syntax = "proto2";

message InjectionPointMessage {
	required uint32 injection_instr = 1;
}